added example preview

--- a/views/footer.jade
+++ b/views/footer.jade
@@ -9,5 +9,9 @@ link(rel='stylesheet', href='/css/style.css')
 script(src='/scripts/bootstrap.min.js')
 script(src='/scripts/jquery.searchable.js')
 script(src='/scripts/mysearch.js')
+//script(src="/node_modules/highlight/lib/highlight.js")
+//script(hljs.initHighlightingOnLoad())
+link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.4.1/themes/prism.css")
+script(src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.4.1/prism.js")
 
 block footer
