--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,7 +11,7 @@ html
 			| <style>
 			| body { padding-top: 60px; }
 			| </style>
-			script(src='//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js')
+			script(type='text/javascript' src='http://code.jquery.com/jquery.min.js')
 	body
 		include header
 
