--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,6 +12,7 @@ html
 			| body { padding-top: 60px; }
 			| </style>
 			script(type='text/javascript' src='http://code.jquery.com/jquery.min.js')
+			script(type='text/javascript' src='https://cdn.rawgit.com/vast-engineering/jquery-popup-overlay/1.7.13/jquery.popupoverlay.js')
 	body
 		include header
 
