--- a/views/layout.jade
+++ b/views/layout.jade
@@ -13,6 +13,10 @@ html
 			| </style>
 			script(type='text/javascript' src='http://code.jquery.com/jquery.min.js')
 			script(type='text/javascript' src='https://cdn.rawgit.com/vast-engineering/jquery-popup-overlay/1.7.13/jquery.popupoverlay.js')
+			script(type='text/javascript' src="scripts/jquery.simplemodal.1.4.1.min.js")
+			link(rel='stylesheet', href='/stylesheets/popupS.min.css')
+			script(src="/js/popupS.min.js")
+
 	body
 		include header
 
