--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,7 +3,7 @@ html
 	head
 		block head
 			block title
-				title Program Name
+				title Illinois-Edison Web Interface
 			block meta
 				meta(name='description', content='')
 				meta(name='keywords', content='')
