--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,5 @@
 extends layout
 
-
 base_url="http://cogcomp.cs.illinois.edu/software/doc/apidocs/"
 script(src='/javascripts/replace_content.js')
 script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js')
@@ -37,36 +36,20 @@ block content
 										td
 											a(href='#{d.javadoc_url}') #{d.name}	
 										td(colspan="10")= d.description
-											code(class="language-clike", style={'white-space': 'pre'})
-												#{d.testcode}
-											
-											//button.btn.btn-info.btn-md(type='button', data-toggle='modal', data-target='#myModal') Sample Code
-											// Modal
-											//#myModal.modal.fade(role='dialog')
-												//.modal-content
-													//.modal-header
-													//	button.close(type='button', data-dismiss='modal') ×
-													//	h3 #{d.name} Sample Code
-													//.modal-body
-													//	code(class="language-clike")
-															//pre.
-															//	#{d.testcode}
-													//.modal-footer
-													//	button.btn(data-dismiss='modal', aria-hidden='true') Close
-												
-								
 
+										td
+											button.btn.btn-info.btn-md(type='button', data-toggle='modal', data-target='#myModal') Sample Code
+											Modal
+											#myModal.modal.fade(role='dialog')
+												.modal-content
+													.modal-header
+														button.close(type='button', data-dismiss='modal') ×
+														h3 #{d.name} Sample Code
+													.modal-body
+														code(class="language-clike", style={'white-space': 'pre'})
+															#{d.testcode}
+													.modal-footer
+														button.btn(data-dismiss='modal', aria-hidden='true') Close
+													
 								
-	script.
-		function hey(i)
-		{
-			var arr = !{JSON.stringify(data2)}[i]["testcode"];
-			//document.getElementById("alert").innerHTML = !{JSON.stringify(data2)}[i]["testcode"];
-			var data = arr.replace(/test/g, "blah")
-			alert(arr)
-			myWindow = window.open("data:text/html," + data,
-								"_blank", "width=600,height=600");
-			myWindow.focus();
-		}
-
 Status API Training Shop Blog About
